@@ -1,3 +1,6 @@
+2008-01-04
+"MyWord" added the result function.
+
 2008-01-02
 "MyWord" almost finished the FirstRecite function
 
